@startuml ejemplo
    class Persona{
        - nombre : string
        - edad : int
        # propiedadesAsignacionMasiva : array
        
        + Persona()
        + mostrar() : string

        + getEdad() : int
        + getNombre() : string
        + setEdad (edad:int) : self
        + setNombre (nombre:string) : self
        + asignar(datos:array) : self
    }

    class Empleado{
        - sueldo : float

        + Empleado()
        + mostrar() : string

        + getSueldo() : float
        + calcularSueldo(horas:int) : void
        + asignar(array datos) : self
    }

    class Cliente{
        # nombreEmpresa : string 
        # telefono :string

        + Cliente()
        + mostrar() : string

        + getNombreEmpresa() : string
        + setNombreEmpresa(nombre:string) : self
        + getTelefono(): string
        + setTelefono(telefono:string): self
    }

    class Directivo{
        - categoria : string

        + mostrar() : string

        + setCategoria(categoria:string): self
        + getCategoria() : string
    }

    Persona <|-- Empleado
    Persona <|-- Cliente
    Empleado <|-- Directivo
@enduml